--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 #root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
   max-width: 1280px;
   margin: 0 auto;
   text-align: center;
@@ -17,6 +17,7 @@
 }
 
 .logo:hover {
+
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 
